sassi-macros/tests/lihaaf/compile_fail/cacheable_on_enum.stderr
error: Cacheable: only structs are supported (no enums or unions)
 --> $DIR/cacheable_on_enum.rs:6:6
  |
6 | enum NotAStruct {
  |      ^^^^^^^^^^

error: aborting due to 1 previous error
